solved color contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -267,8 +267,8 @@ section p {
 
 section {
     margin: 10px;
-    background-color:#6868b1;
-    color: rgb(9, 9, 44);
+    background-color:#8888d7;
+    color: #000000;
 
 }
 
